# MeshUp

./: .gitignore  .hgignore  .hgtags  CMakeLists.txt  Changelog.md  Doxyfile  LICENSE  README  README.md  TODO.md  config.ld  data_from_example.csv  example_data.csv  sampleanimation.csv  sampleanimation.txt  walkanimation.csv  walkanimation.txt
RelWithDebInfo/src/: meshup_config.h
converter/: converter.cc
doc/: FormatDescriptions.html  FormatDescriptions.md  Mainpage.dox  Makefile  examplemodel.lua
doc/scripting/: examplescript.lua  frontal_montage.lua  index.html  lateral_montage.lua  perspective_montage.lua
doc/scripting/examples/: examplescript.lua.html  frontal_montage.lua.html  lateral_montage.lua.html
jsoncpp/src/lib_json/: json_writer.cpp
models/: knubbi.json  knubbi.lua  samplemodel.json  samplemodel.lua  two_body_human.json  two_body_human.lua  yzxrotation.json  yzxrotation.lua
src/: Animation.cc  Animation.h  AnimationEditModel.cc  AnimationEditModel.h  Arrow.cc  Arrow.h  Camera.cc  Camera.h  CameraAnimate.cc  CameraAnimate.h  CameraOperator.cc  CameraOperator.h  Curve.cc  Curve.h  DoubleSpinBoxDelegate.cc  DoubleSpinBoxDelegate.h  ForcesTorques.cc  ForcesTorques.h  FrameConfig.h  Math.h  MeshVBO.cc  MeshVBO.h  MeshupApp.cc  MeshupApp.h  MeshupModel.cc  MeshupModel.h  Model.cc  Model.h  ModelData.cc  ModelData.h  OBJMesh.cc  OBJMesh.h  QtSimpleGlApp.h  RenderImageDialog.h  RenderImageSeriesDialog.h  RenderVideoDialog.h  Scene.cc  Scene.h  Scripting.cc  Scripting.h  (+17 more)
src/SimpleMath/: SimpleMath.h  SimpleMathFixed.h  SimpleMathGL.h  SimpleMathLU.h
src/luatables/: luatables.cc  luatables.h
src/ui/: AnimationEditModel.cc  AnimationEditModel.h  CheckBoxDelegate.cc  CheckBoxDelegate.h  DoubleSpinBoxDelegate.cc  DoubleSpinBoxDelegate.h
tests/: AnimationRawValuesTests.cc  AnimationTests.cc  BoneAnimationTrackTests.cc  CMakeLists.txt  FrameAnimationTrackTests.cc  FrameTests.cc  QuaternionTests.cc  StringUtilsTests.cc
tools/: cone.py
ui/: MainWindow.ui  RenderImageSeriesDialog.ui  RenderVideoDialog.ui  meshup_resources.qrc  test.cam
